manual/dev-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-postgres
  namespace: fitm-cloud
  labels:
    app.kubernetes.io/name: fitm-cloud
    app.kubernetes.io/component: postgres
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: fitm-cloud
    app.kubernetes.io/component: postgres
  ports:
    - name: postgres
      port: 5432
      nodePort: 30032
      protocol: TCP
    - name: postgres-dev
      port: 5433
      nodePort: 30033
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: dev-redis
  namespace: fitm-cloud
  labels:
    app.kubernetes.io/name: fitm-cloud
    app.kubernetes.io/component: redis
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: fitm-cloud
    app.kubernetes.io/component: redis
  ports:
    - name: redis
      port: 6379
      nodePort: 30039
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: dev-loki
  namespace: fitm-cloud
  labels:
    app.kubernetes.io/name: fitm-cloud
    app.kubernetes.io/component: loki
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: fitm-cloud
    app.kubernetes.io/component: loki
  ports:
    - name: loki
      port: 3100
      nodePort: 30100
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: dev-jaeger
  namespace: fitm-cloud
  labels:
    app.kubernetes.io/name: fitm-cloud
    app.kubernetes.io/component: jaeger
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: fitm-cloud
    app.kubernetes.io/component: jaeger
  ports:
    - name: jaeger
      port: 16686
      nodePort: 30166
      protocol: TCP
    - name: otel-grpc
      port: 4317
      nodePort: 30431
      protocol: TCP
    - name: otel-http
      port: 4318
      nodePort: 30432
      protocol: TCP
---
