manual/influx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-influxdb
  namespace: fitm-cloud
  labels:
    app.kubernetes.io/name: fitm-cloud
    app.kubernetes.io/component: influxdb
spec:
  selector:
    app.kubernetes.io/name: fitm-cloud
    app.kubernetes.io/component: influxdb
  type: NodePort
  ports:
    - name: http
      port: 8086
      targetPort: 8086
      protocol: TCP
      nodePort: 30086
